--- a/ansible/playbooks/smart-status.yml
+++ b/ansible/playbooks/smart-status.yml
@@ -5,13 +5,23 @@
     wait_seconds: 120
   tasks:
     - name: Short test
-      shell: smartctl -t short /dev/sda
+      shell:  |
+        for drive in $(smartctl --scan | cut -d ' ' -f 1);do
+           if [[ ! -e $drive ]]; then continue ; fi
+           smartctl -t short $drive
+        done
 
     - name: pause for {{ wait_seconds | int }} second(s)
       ansible.builtin.pause:
         seconds: "{{ wait_seconds | int }}"
 
     - name: Result
-      shell: "smartctl -H /dev/sda"
+      shell: |
+        for drive in $(smartctl --scan | cut -d ' ' -f 1);do
+           if [[ ! -e $drive ]]; then continue ; fi
+           smartctl -H $drive
+        done
+      args:
+        executable: /bin/bash
       register: output
     - debug: msg={{output.stdout_lines | join('\n')}}
